kubernetes/environments/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
  name: status-page
spec:
  ingressClassName: traefik
  rules:
  - host: <your-web-domain>
    http:
      paths:
      - backend:
          service:
            name: status-page-web
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: <your-dex-domain>
    http:
      paths:
      - backend:
          service:
            name: status-page-dex
            port:
              number: 5556
        path: /
        pathType: Prefix
  - host: <your-api-domain>
    http:
      paths:
      - backend:
          service:
            name: status-page-oathkeeper
            port:
              number: 4455
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - <your-web-domain>
        - <your-dex-domain>
        - <your-api-domain>
      secretName: status-page-ingress-tls
